# bor

./: .bazelrc  .gitignore  .gitmodules  BUILD  MODULE.bazel  WORKSPACE  WORKSPACE-old  requirements-lock.txt  requirements-windows.txt
.github/workflows/: bazel_build.yml  bazel_steward.yml
docs/: code_style.md  macos.md
freyr/: BUILD  repositories.bzl
freyr/assets/shaders/: device_manager.h  gpgpu.h
freyr/assets/shaders/metal/: BUILD  device_manager_impl.h  fragment_phong.metal  gamma_correction.metal  lighting_ambient.metal  lighting_diffuse.metal  lighting_specular.metal  manager.cpp  metal_backend.cpp  metal_backend.h  op_addition.h  op_addition.metal  op_base.h  op_subtraction.h  op_subtraction.metal  vertex_projection.metal
freyr/assets/shaders/opengl/: fragment_phong.glsl  lighting_ambient.glsl  (+3 more)
freyr/dev/: main.py  main2.py  main3.py  main_draft.py  test_crtp.cpp
freyr/examples/: BUILD  example_basic.py  example_blenderproc.py  example_blenderproc.sh  example_blenderproc_main.py  example_blenderproc_main2.py  example_eros.py  example_gpgpu.cpp  example_metal_gpgpu.cpp  example_metal_window.cpp  example_optical_flow.py
freyr/examples/data/: BUILD  eros_gaskell_200k_poly.ply  eros_gaskell_50k_poly.ply
freyr/include/freyr/: algo.h  camera.h  common.h  core.h  entity.h  light.h  metal.h  pybind.h  ray.h  scene.h  shader.h  shape.h  texture.h
freyr/src/: camera.h  core.cpp  ray.h  shape.h
freyr/src/algorithms/: metal_wrapper.cpp
freyr/tests/: mesh.py
mimir/: README.md
mimir/.obsidian/: workspace.json
mimir/tools/: filename_formatter.py
(+19 files in other folders)
